tests/data/pl0/valid/feature_io_q_bang_relops.pl0
var x;
begin
? x;
! x;
if x <= 10 then ! x;
if x >= 0 then ! x;
end.
