tests/data/pl0/invalid/error_duplicate_identifier_same_scope.pl0
var x, x;
begin
end.
